# My-M365-Statuspage

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.en.md  README.md  container-structure-test.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  release-please-config.json  repair.sh  requirements.txt  ruff.toml  setup.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: audit-scheduled.yml  ci.yml  release-please.yml  release.yml  trivy.yml
app/: __init__.py  app_settings.py  auth.py  config.py  crud.py  database.py  dependencies.py  flash.py  graph_client.py  i18n.py  main.py  models.py  notifications.py  scheduler.py  schemas.py  templates.py
app/routers/: admin.py  api.py  auth_router.py  embed.py  status.py  subscribers.py
claude/projects/: MDT.md  My-M365-Statuspage.md  Script-Libary.md
gitconf/: gitignore_global
static/: manifest.webmanifest  offline.html  sw.js
templates/: base.html  embed.html  status.html  subscribe_result.html
templates/admin/: base_admin.html  dashboard.html  debug.html  incident_detail.html  incident_form.html  incidents_all.html  maintenance_form.html  maintenances_all.html  settings.html
templates/partials/: _form_macros.html  _icons.html  incident_card.html  service_row.html  uptime_bar.html
tests/: test_docker_integration.py
