[project]
name = "my-m365-statuspage"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "jinja2==3.1.6",
    "python-multipart==0.0.32",
    "authlib==1.7.2",
    "itsdangerous==2.2.0",
    "msal==1.37.0",
    "httpx==0.28.1",
    "sqlalchemy[asyncio]==2.0.51",
    "aiosqlite==0.22.1",
    "apscheduler==3.11.2",
    "pydantic-settings==2.14.2",
    "python-dotenv==1.2.2",
    "nh3==0.3.6",
    "mistune==3.3.1",
    "starlette==1.3.1",
    "cryptography>=49.0.0,<50",
    "aiosmtplib==5.1.2",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
extend = "ruff.toml"
